--- a/vfreitas_project/templates/topic_posts.html
+++ b/vfreitas_project/templates/topic_posts.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load gravatar %}
+
 {% load static %}
 
 {% block title %}{{ topic.subject }}{% endblock %}
@@ -24,7 +26,10 @@
         <div class="card-body p-3">
         <div class="row">
           <div class="col-2">
-            <img src="{% static 'img/iconfinder_user_male.png' %}" alt="{{ post.created_by.username }}" class="w-100">
+            <!-- <img src="{% static 'img/iconfinder_user_male.png' %}" alt="{{ post.created_by.username }}" class="w-100"> -->
+
+            <img src="{{ post.created_by|gravatar }}" alt="{{ post.created_by.username }}" class="w-100 rounded">
+            
             <small>Posts: {{ post.created_by.posts.count }}</small>
           </div>
           <div class="col-10">
